# win-dynamic-island

./: .gitignore  DESIGN.md  PRODUCT.md  README.en.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bluetooth.rs  clipboard.rs  dragdrop.rs  glass.rs  lib.rs  media.rs  system.rs  timer.rs  tray.rs  volume.rs  window.rs
src/activity/: coordinator.test.mjs  coordinator.ts
src/island/: ActivityRail.tsx  BluetoothStatus.test.tsx  BluetoothStatus.tsx  Island.test.tsx  Island.tsx  SettingsPanel.tsx  noticeRenderers.test.ts  noticeRenderers.ts
src/lib/: native.test.ts  native.ts
src/modules/: clock.tsx  index.ts  nowplaying.tsx  registry.ts  shelf.tsx  system.tsx  time.tsx  types.ts  volume.tsx
src/store/: activities.ts  bluetooth.test.ts  bluetooth.ts  island.ts  modules.ts  noticeSources.test.ts  noticeSources.ts  notices.test.ts  notices.ts  settings.test.ts  settings.ts  time.ts
src/styles/: global.css
